add more contact info

--- a/HealthCare_fraud_detection.ipynb
+++ b/HealthCare_fraud_detection.ipynb
@@ -16,13 +16,19 @@
     "    \n",
     "    def __init__(self):\n",
     "    \n",
-    "        self.name = \"Xinyu (Max) Liu\"\n",
+    "        self.name     = \"Xinyu (Max) Liu\"\n",
     "\n",
-    "        self.email = \"xinyulrsm@gmail.com\"\n",
+    "        self.email    = \"xinyulrsm@gmail.com\"\n",
     "\n",
-    "        self.create =  \"01/16/2016\"\n",
+    "        self.linkedin = \"linkedin.com/in/maxliuwebsite\"\n",
+    "        \n",
+    "        self.github   = \"github.com/maxliu/\"\n",
+    "        \n",
+    "        self.create   = \"01/16/2016\"\n",
     "\n",
     "        self.addreess = \"Waltham, MA 02453\"\n",
+    "        \n",
+    "        \n",
     "```"
    ]
   },
@@ -105,17 +111,6 @@
    "metadata": {},
    "source": [
     "## pig script for data preparison"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "-"
    ]
   },
   {
@@ -809,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -831,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -843,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -851,24 +846,44 @@
     {
      "data": {
       "text/plain": [
-       "count    808076.000000\n",
-       "mean          0.205802\n",
-       "std          80.540528\n",
-       "min           0.000000\n",
-       "25%           0.000000\n",
-       "50%           0.000000\n",
-       "75%           0.000000\n",
-       "max       46030.399922\n",
+       "count      144.000000\n",
+       "mean      1154.889236\n",
+       "std       5942.482746\n",
+       "min          8.390000\n",
+       "25%         19.472501\n",
+       "50%         57.969999\n",
+       "75%        145.230002\n",
+       "max      46030.399922\n",
        "Name: total_payment, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['total_payment'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numbuer of labled 'is_fraud' data : 427\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we found 427 record we could use as fraud\n",
+    "print \"numbuer of labled 'is_fraud' data : %d\" % (len(df[df['is_fraud']==1]))"
    ]
   },
   {
@@ -890,7 +905,6 @@
     }
    ],
    "source": [
-    "# we found 427 record we could use as fraud\n",
     "len(df[df['is_fraud']==1])"
    ]
   },
@@ -898,151 +912,13 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>npi</th>\n",
-       "      <th>count</th>\n",
-       "      <th>specialty</th>\n",
-       "      <th>claim_min</th>\n",
-       "      <th>claim_max</th>\n",
-       "      <th>claim_sum</th>\n",
-       "      <th>supply_min</th>\n",
-       "      <th>supply_max</th>\n",
-       "      <th>supply_sum</th>\n",
-       "      <th>drug_min</th>\n",
-       "      <th>drug_max</th>\n",
-       "      <th>drug_sum</th>\n",
-       "      <th>payment_count</th>\n",
-       "      <th>total_payment</th>\n",
-       "      <th>is_fraud</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1528364486</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Dentist</td>\n",
-       "      <td>14</td>\n",
-       "      <td>19</td>\n",
-       "      <td>33</td>\n",
-       "      <td>176</td>\n",
-       "      <td>305</td>\n",
-       "      <td>481</td>\n",
-       "      <td>97.54</td>\n",
-       "      <td>162.96</td>\n",
-       "      <td>260.500008</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1437177490</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Dentist</td>\n",
-       "      <td>14</td>\n",
-       "      <td>89</td>\n",
-       "      <td>188</td>\n",
-       "      <td>46</td>\n",
-       "      <td>2955</td>\n",
-       "      <td>4726</td>\n",
-       "      <td>106.12</td>\n",
-       "      <td>4346.47</td>\n",
-       "      <td>5468.750191</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1154586170</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Dentist</td>\n",
-       "      <td>12</td>\n",
-       "      <td>17</td>\n",
-       "      <td>29</td>\n",
-       "      <td>141</td>\n",
-       "      <td>170</td>\n",
-       "      <td>311</td>\n",
-       "      <td>37.09</td>\n",
-       "      <td>119.95</td>\n",
-       "      <td>157.039997</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1215042155</td>\n",
-       "      <td>9</td>\n",
-       "      <td>General Surgery</td>\n",
-       "      <td>17</td>\n",
-       "      <td>87</td>\n",
-       "      <td>522</td>\n",
-       "      <td>98</td>\n",
-       "      <td>410</td>\n",
-       "      <td>2107</td>\n",
-       "      <td>84.80</td>\n",
-       "      <td>377.74</td>\n",
-       "      <td>2120.089966</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1104847011</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Dentist</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>78</td>\n",
-       "      <td>78</td>\n",
-       "      <td>78</td>\n",
-       "      <td>59.26</td>\n",
-       "      <td>59.26</td>\n",
-       "      <td>59.259998</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "          npi  count        specialty  claim_min  claim_max  claim_sum  \\\n",
-       "0  1528364486      2          Dentist         14         19         33   \n",
-       "1  1437177490      5          Dentist         14         89        188   \n",
-       "2  1154586170      2          Dentist         12         17         29   \n",
-       "3  1215042155      9  General Surgery         17         87        522   \n",
-       "4  1104847011      1          Dentist         11         11         11   \n",
-       "\n",
-       "   supply_min  supply_max  supply_sum  drug_min  drug_max     drug_sum  \\\n",
-       "0         176         305         481     97.54    162.96   260.500008   \n",
-       "1          46        2955        4726    106.12   4346.47  5468.750191   \n",
-       "2         141         170         311     37.09    119.95   157.039997   \n",
-       "3          98         410        2107     84.80    377.74  2120.089966   \n",
-       "4          78          78          78     59.26     59.26    59.259998   \n",
-       "\n",
-       "   payment_count  total_payment  is_fraud  \n",
-       "0              0              0         0  \n",
-       "1              0              0         0  \n",
-       "2              0              0         0  \n",
-       "3              0              0         0  \n",
-       "4              0              0         0  "
+       "808076"
       ]
      },
      "execution_count": 23,
@@ -1050,6 +926,18 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "df.head()"
    ]
